[gd_scene load_steps=5 format=3 uid="uid://jvtuamjq0x3h"]

[ext_resource type="Texture2D" uid="uid://bcd0102fay0hl" path="res://assets/imagens/cartas.png" id="1_ussd5"]
[ext_resource type="Script" path="res://carta.gd" id="1_wd3jc"]
[ext_resource type="Texture2D" uid="uid://c7wc2oumchmdq" path="res://assets/imagens/backgroundCard.png" id="2_2xjkm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_llui5"]
size = Vector2(130, 210)

[node name="Carta" type="Node2D"]
script = ExtResource("1_wd3jc")

[node name="BackgroundCard" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.603922)
scale = Vector2(0.25, 0.235)
texture = ExtResource("2_2xjkm")

[node name="carta_sprite" type="Sprite2D" parent="."]
scale = Vector2(0.22, 0.22)
texture = ExtResource("1_ussd5")
hframes = 6
vframes = 4
frame = 23

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_llui5")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
